add `archiver-lambda` (which runs every 6 hours) which...  - invokes `workflow-bridge-lambda` to get active workflow IDs  - marks pinboard items as `isArchived` if their `pinboardId` isn't in the list of active workflow IDs  - removes any archived pinboards from the `manuallyOpenedPinboardIds` field of relevant users

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "notifications-lambda",
     "users-refresher-lambda",
     "workflow-bridge-lambda",
-    "database-bridge-lambda"
+    "database-bridge-lambda",
+    "archiver-lambda"
   ],
   "scripts": {
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
