--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": ">=10",
-    "prettier": "2.2.1",
+    "prettier": "^2.8.6",
     "prompts": "^2.4.2",
     "ts-jest": "^26.5.4",
     "tsafe": "^1.0.1",
