--- a/users-refresher-lambda/package.json
+++ b/users-refresher-lambda/package.json
@@ -11,10 +11,10 @@
     "test": "jest 2>&1"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.299.0",
     "@types/iniparser": "^0.0.29",
     "@types/node-fetch": "2",
     "@types/node-forge": "^0.9.7",
-    "aws-sdk": "^2.840.0",
     "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
