[aws-sdk-v2-to-v3] `shared` (which involved making it a 'workspace' so it can have its own dependencies)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "users-refresher-lambda",
     "workflow-bridge-lambda",
     "database-bridge-lambda",
-    "archiver-lambda"
+    "archiver-lambda",
+    "shared"
   ],
   "scripts": {
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
