--- a/grid-bridge-lambda/package.json
+++ b/grid-bridge-lambda/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js --platform=node",
+    "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk",
     "build": "run-p --print-label type-check bundle",
-    "run-dev": "esbuild run.ts --bundle --minify --outfile=dist/index.js --platform=node && node dist/index.js"
+    "run-dev": "esbuild run.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk && node dist/index.js"
   },
   "devDependencies": {
     "@types/node-fetch": "^3.0.3"
