--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@types/aws-lambda": "^8.10.114",
     "@types/jest": "^26.0.22",
+    "@types/node": "^18.15.11",
+    "@types/node-fetch": "^2.6.3",
     "@types/prompts": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
