add `email-lambda` to email users about missed messages etc.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "workflow-bridge-lambda",
     "database-bridge-lambda",
     "archiver-lambda",
+    "email-lambda",
     "shared"
   ],
   "scripts": {
