--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "aws-appsync-subscription-link": "^3.0.9",
     "date-fns": "^2.19.0",
     "graphql": "^15.4.0",
-    "preact": "^10.5.13",
+    "preact": "10.5.13",
     "react-draggable": "^4.4.5",
     "react-joyride": "^2.5.3",
     "react-shadow": "^19.0.2"
@@ -39,8 +39,8 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@prefresh/webpack": "^3.3.3",
     "@svgr/webpack": "^6.2.1",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
     "@types/webpack-env": "^1.16.3",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "babel-loader": "^8.2.3",
