--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -111,3 +111,13 @@ deployments:
       prefixStack: false
       fileName: pinboard-archiver-lambda.zip
       functionNames: [pinboard-archiver-lambda-]
+
+  pinboard-email-lambda:
+    dependencies:
+      - pinboard-cloudformation
+    type: aws-lambda
+    app: pinboard
+    parameters:
+      prefixStack: false
+      fileName: pinboard-email-lambda.zip
+      functionNames: [pinboard-email-lambda-]
