--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -18,7 +18,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/aws-serverless-express": "^3.3.3",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.8",
+    "@types/express": "4.17.17",
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
@@ -29,7 +29,7 @@
     "@guardian/pan-domain-node": "^0.4.2",
     "aws-serverless-express": "^3.4.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "4.18.2",
     "jose": "^4.3.7"
   }
 }
