--- a/users-refresher-lambda/package.json
+++ b/users-refresher-lambda/package.json
@@ -17,8 +17,8 @@
     "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
-    "@googleapis/admin": "^5.1.0",
-    "@googleapis/people": "^1.0.2",
+    "@googleapis/admin": "9.0.1",
+    "@googleapis/people": "3.0.2",
     "iniparser": "^1.0.5",
     "node-forge": "^1.3.0",
     "postgres": "^3.2.4"
