--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 ## code changes will send PR to following users
-* @guardian/digital-cms @twrichards @aracho1 @phillipbarron 
+* @guardian/digital-cms @twrichards
