WIP add `ChatBot` support

--- a/database-bridge-lambda/package.json
+++ b/database-bridge-lambda/package.json
@@ -7,9 +7,12 @@
     "type-check": "tsc --noEmit",
     "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk",
     "build": "run-p --print-label type-check bundle",
-    "watch": "ts-node-dev --respawn run.ts"
+    "watch": "ts-node-dev --respawn run.ts",
+    "watch-bots": "ts-node-dev --respawn runGetBots.ts"
   },
   "devDependencies": {
+    "@aws-sdk/client-lambda": "^3.299.0",
+    "@aws-sdk/client-ram": "^3.299.0",
     "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
