Experiment - run "knip --fix-type dependencies" across repo

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-write": "prettier --write .",
     "prettier-check": "prettier --check .",
     "lint": "eslint . --ext .ts --ext .tsx",
+    "knip": "knip",
     "watch-client": "yarn --cwd 'client' watch 2>&1",
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1",
     "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
@@ -35,8 +36,6 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/introspection": "1.18.0",
-    "@graphql-codegen/typescript": "1.17.11",
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@types/aws-lambda": "^8.10.114",
     "@types/jest": "^26.0.22",
@@ -51,6 +50,7 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
+    "knip": "^5.41.1",
     "lint-staged": ">=10",
     "prettier": "^2.8.6",
     "prompts": "^2.4.2",
