--- a/client/package.json
+++ b/client/package.json
@@ -44,12 +44,9 @@
     "@types/webpack-env": "^1.16.3",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "babel-loader": "^8.2.3",
-    "html-webpack-plugin": "^5.5.0",
     "jest-environment-node": "^26.6.2",
     "webpack": "^5.76.0",
-    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-dev-server": "^4.7.4"
   }
 }
