--- a/email-lambda/package.json
+++ b/email-lambda/package.json
@@ -16,10 +16,8 @@
     "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
-    "postgres": "^3.2.4",
     "preact": "10.15.1",
     "preact-render-to-string": "^6.0.3",
-    "react": "npm:@preact/compat@*",
-    "react-dom": "npm:@preact/compat@*"
+    "react": "npm:@preact/compat@*"
   }
 }
