--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -12,10 +12,12 @@
     "build": "run-p --print-label type-check bundle"
   },
   "devDependencies": {
+    "@aws-sdk/client-appsync": "^3.716.0",
     "@aws-sdk/client-lambda": "^3.299.0",
     "@aws-sdk/client-s3": "^3.299.0",
     "@types/cors": "^2.8.12",
     "@types/express": "4.17.17",
+    "@types/iniparser": "^0.0.32",
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
