--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "@types/webpack-env": "^1.16.3",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.6.3",
     "jest-environment-node": "^26.6.2",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.2",
