fix shared aws dependencies

--- a/shared/package.json
+++ b/shared/package.json
@@ -7,12 +7,12 @@
     "build": "tsc --noEmit"
   },
   "devDependencies": {
+    "@aws-sdk/client-auto-scaling": "^3.716.0",
+    "@aws-sdk/client-ec2": "^3.716.0",
+    "@aws-sdk/client-rds": "^3.716.0",
     "@aws-sdk/client-s3": "^3.299.0",
     "@aws-sdk/client-ssm": "^3.299.0",
     "@aws-sdk/credential-providers": "^3.299.0",
     "@aws-sdk/rds-signer": "^3.299.0"
-  },
-  "dependencies": {
-    "postgres": "^3.4.5"
   }
 }
