--- a/shared/package.json
+++ b/shared/package.json
@@ -14,5 +14,8 @@
     "@aws-sdk/client-ssm": "^3.299.0",
     "@aws-sdk/credential-providers": "^3.299.0",
     "@aws-sdk/rds-signer": "^3.299.0"
+  },
+  "dependencies": {
+    "postgres": "^3.4.5"
   }
 }
