--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "private": true,
+  "type": "module",
   "workspaces": [
     "auth-lambda",
     "bootstrapping-lambda",
@@ -21,7 +22,7 @@
     "graphql-refresh": "graphql-codegen --config graphql-refresh.yml",
     "prettier-write": "prettier --write .",
     "prettier-check": "prettier --check .",
-    "lint": "eslint . --ext .ts --ext .tsx",
+    "lint": "eslint",
     "watch-client": "yarn --cwd 'client' watch 2>&1",
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1",
     "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
@@ -34,6 +35,7 @@
     "generate-appsync-auth-token": "ts-node-dev bootstrapping-lambda/generateAppSyncAuthToken.ts"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/introspection": "1.18.0",
     "@graphql-codegen/typescript": "1.17.11",
@@ -43,12 +45,11 @@
     "@types/node": "^22.10.1",
     "@types/node-fetch": "^2.6.3",
     "@types/prompts": "^2.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
     "esbuild": "^0.14.18",
-    "eslint": "^7.16.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint": "^9.17.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-react": "^7.37.3",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lint-staged": ">=10",
@@ -57,6 +58,7 @@
     "ts-jest": "^26.5.4",
     "tsafe": "^1.0.1",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2",
     "wsrun": "^5.2.4",
     "yarn-run-all": "^3.1.1"
   },
