--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@graphql-codegen/typescript": "^4.1.2",
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@types/aws-lambda": "^8.10.114",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^28.1.1",
     "@types/node": "^22.10.1",
     "@types/node-fetch": "^2.6.3",
     "@types/prompts": "^2.0.14",
@@ -50,12 +50,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^7.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
+    "jest-mock": "^29.7.0",
     "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.6",
     "prompts": "^2.4.2",
-    "ts-jest": "^27.1.5",
+    "ts-jest": "^28.0.8",
     "tsafe": "^1.0.1",
     "typescript": "^5.7.3",
     "wsrun": "^5.2.4"
