--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -15,14 +15,18 @@
     "@aws-sdk/client-appsync": "^3.299.0",
     "@aws-sdk/client-lambda": "^3.299.0",
     "@aws-sdk/client-s3": "^3.299.0",
+    "@babel/core": "^7.26.10",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/babel__core": "^7",
     "@types/cors": "^2.8.12",
     "@types/express": "4.17.17",
     "@types/jest": "^29.2.3",
+    "@types/node": "^22.13.10",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^1.0.0"
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.16.0",
