--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
     "typescript": "^5.7.3",
     "wsrun": "^5.2.4"
   },
+  "resolutions": {
+    "cdk@1.0.0/cross-spawn": "^7.0.5",
+    "client@1.0.0/cross-spawn": "^7.0.5"
+  },
   "lint-staged": {
     "**/*.{ts, tsx}": "eslint --fix",
     "**/*": "prettier --write --ignore-unknown"
