Revert "pin typescript version to satisfy CI check"
This reverts commit f7c40175985375e5ac5e1c79e9a6bd45d501173d.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "prompts": "^2.4.2",
     "ts-jest": "^29.2.5",
     "tsafe": "^1.0.1",
-    "typescript": "5.7.3",
+    "typescript": "^5.7.3",
     "wsrun": "^5.2.4"
   },
   "resolutions": {
