Change code owner to workflow and collaboration
The [Workflow and Collaboration
team](https://github.com/orgs/guardian/teams/workflow-and-collaboration)
is now responsible for this repository (e.g. for health upgrade etc.).
As such, we think it makes sense to narrow the code owner from
digital-cms (which is quite a large group) to workflow and
collaboration.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 ## code changes will send PR to following users
-* @guardian/digital-cms @twrichards
+* @guardian/workflow-and-collaboration @twrichards
