--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 ## code changes will send PR to following users
-* @guardian/workflow-and-collaboration @twrichards
+* @guardian/digital-cms @twrichards
