--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "watch-client": "yarn --cwd 'client' watch 2>&1",
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1",
     "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
-    "test": "wsrun --parallel --fast-exit --prefix --report --exclude-missing test ",
+    "test": "wsrun --parallel --fast-exit --prefix --report --exclude-missing test",
+    "update-snapshot": "wsrun --parallel --fast-exit --prefix --report --exclude-missing update-snapshot",
     "type-check": "wsrun --parallel --fast-exit --prefix --report type-check",
-    "build": "wsrun --parallel --fast-exit --prefix --report build ",
+    "build": "wsrun --parallel --fast-exit --prefix --report build",
     "prepare": "husky install",
     "database-setup": "ts-node-dev shared/database/local/runDatabaseSetup.ts",
     "database-migrate": "ts-node-dev shared/database/local/runDatabaseMigration.ts",
