--- a/notifications-lambda/package.json
+++ b/notifications-lambda/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc --noEmit",
     "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk",
     "watch": "ts-node-dev --respawn run.ts",
+    "server": "ts-node-dev --respawn src/server.ts",
     "build": "run-p --print-label type-check bundle"
   },
   "devDependencies": {
@@ -14,6 +15,9 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "@codegenie/serverless-express": "^4.16.0",
+    "@guardian/pan-domain-node": "^1.2.0",
+    "express": "4.22.1",
     "postgres": "^3.2.4",
     "web-push": "^3.5.0"
   }
