--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       # required by aws-actions/configure-aws-credentials
       id-token: write
       contents: read
+      pull-requests: write
     steps:
       - name: calculate build number
         run: |
@@ -74,7 +75,34 @@ jobs:
           cp -v client/dist/pinboard.main* dist/client
           cp -rv client/dist/push-notifications dist/client
 
-      - name: upload riff-raff artifacts
-        run: |
-          export GITHUB_RUN_NUMBER=$BUILD_NUMBER
-          yarn node-riffraff-artifact
+      - uses: guardian/actions-riff-raff@v4
+        with:
+          app: Editorial Tools::PinBoard
+          configPath: riff-raff.yaml
+          contentDirectories: |
+            pinboard-cloudformation:
+              - cdk/cdk.out/PinBoardStack-CODE.template.json
+              - cdk/cdk.out/PinBoardStack-PROD.template.json
+            pinboard-db-jump-host-asg-artifact:
+              - cdk/startup.sh
+            pinboard-bootstrapping-lambda-api:
+              - dist
+            pinboard-workflow-bridge-lambda:
+              - workflow-bridge-lambda/dist
+            pinboard-grid-bridge-lambda:
+              - grid-bridge-lambda/dist
+            pinboard-users-refresher-lambda:
+              - users-refresher-lambda/dist
+            pinboard-notifications-lambda:
+              - notifications-lambda/dist
+            pinboard-auth-lambda:
+              - auth-lambda/dist
+            pinboard-database-bridge-lambda:
+              - database-bridge-lambda/dist
+            pinboard-archiver-lambda:
+              - archiver-lambda/dist
+            pinboard-email-lambda:
+              - email-lambda/dist
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          roleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
+          buildNumber: $BUILD_NUMBER
