Zip subproject before riff-raff step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,17 @@ jobs:
           cp -rv client/dist/push-notifications dist/client
           zip -r dist/pinboard-bootstrapping-lambda-api.zip dist/*
 
+      - name: zip subprojects
+        run: |
+          zip -r workflow-bridge-lambda/pinboard-workflow-bridge-lambda.zip workflow-bridge-lambda/dist/*
+          zip -r grid-bridge-lambda/grid-bridge-lambda.zip grid-bridge-lambda/dist/*
+          zip -r users-refresher-lambda/users-refresher-lambda.zip users-refresher-lambda/dist/*
+          zip -r notifications-lambda/notifications-lambda.zip notifications-lambda/dist/*
+          zip -r auth-lambda/auth-lambda.zip auth-lambda/dist/*
+          zip -r database-bridge-lambda/database-bridge-lambda.zip database-bridge-lambda/dist/*
+          zip -r archiver-lambda/archiver-lambda.zip archiver-lambda/dist/*
+          zip -r email-lambda/email-lambda.zip email-lambda/dist/*
+
       - uses: guardian/actions-riff-raff@v4
         with:
           projectName: Editorial Tools::PinBoard
@@ -89,21 +100,21 @@ jobs:
             pinboard-bootstrapping-lambda-api:
               - dist/pinboard-bootstrapping-lambda-api.zip
             pinboard-workflow-bridge-lambda:
-              - workflow-bridge-lambda/dist
+              - workflow-bridge-lambda/pinboard-workflow-bridge-lambda.zip 
             pinboard-grid-bridge-lambda:
-              - grid-bridge-lambda/dist
+              - grid-bridge-lambda/grid-bridge-lambda.zip
             pinboard-users-refresher-lambda:
-              - users-refresher-lambda/dist
+              - users-refresher-lambda/users-refresher-lambda.zip
             pinboard-notifications-lambda:
-              - notifications-lambda/dist
+              - notifications-lambda/notifications-lambda.zip
             pinboard-auth-lambda:
-              - auth-lambda/dist
+              - auth-lambda/auth-lambda.zip
             pinboard-database-bridge-lambda:
-              - database-bridge-lambda/dist
+              - database-bridge-lambda/database-bridge-lambda.zip
             pinboard-archiver-lambda:
-              - archiver-lambda/dist
+              - archiver-lambda/archiver-lambda.zip
             pinboard-email-lambda:
-              - email-lambda/dist
+              - email-lambda/email-lambda.zip
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           roleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
           buildNumber: ${{ env.BUILD_NUMBER }}
