Add app value to notifications lambda riff raff config
Co-Authored-By: Tom Richards <19289579+twrichards@users.noreply.github.com>

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -79,6 +79,7 @@ deployments:
     dependencies:
       - pinboard-cloudformation
     type: aws-lambda
+    app: pinboard
     parameters:
       prefixStack: false
       fileName: pinboard-notifications-lambda.zip
