Add domain details to notifications API config
Co-Authored-By: Tom Richards <19289579+twrichards@users.noreply.github.com>

--- a/dev-nginx.yaml
+++ b/dev-nginx.yaml
@@ -4,5 +4,5 @@ mappings:
     port: 3030
   - prefix: pinboard-sandbox # for simulating cross-domain (useful for checking the service worker in iFrame)
     port: 3030
-  - prefix: notifications
+  - prefix: staff-notifications
     port: 3031
