--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,13 +14,11 @@
     "update-snapshot": "jest -u"
   },
   "devDependencies": {
-    "ts-node": "9.0.0"
-  },
-  "dependencies": {
     "@aws-cdk/aws-appsync-alpha": "2.54.0-alpha.0",
     "@guardian/cdk": "^62.1.1",
     "aws-cdk": "^2.1033.0",
     "aws-cdk-lib": "^2.231.0",
-    "constructs": "10.4.3"
+    "constructs": "10.4.3",
+    "ts-node": "9.0.0"
   }
 }
