WIP add new `notifications-ui` subdirectory of `notifications-lambda` containing the beginnings of a Svelte app which will be the new shared/centralised notifications UI, served by the notifications lambda (incl. loader script to be added to many other tools for showing an iframe for notifications settings if applicable)

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint": "eslint . --ext .ts --ext .tsx",
     "watch-client": "yarn --cwd 'client' watch 2>&1",
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1",
-    "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
+    "watch-notifications-lambda": "yarn --cwd 'notifications-lambda' watch 2>&1",
+    "watch": "run-p --print-label watch-client watch-bootstrapping-lambda watch-notifications-lambda",
     "test": "wsrun --parallel --fast-exit --prefix --report --exclude-missing test",
     "update-snapshot": "wsrun --parallel --fast-exit --prefix --report --exclude-missing update-snapshot",
     "type-check": "wsrun --parallel --fast-exit --prefix --report type-check",
