--- a/notifications-lambda/package.json
+++ b/notifications-lambda/package.json
@@ -4,15 +4,28 @@
   "description": "Lambda to receive DynamoDB Stream events from Item table and send desktop notifications to users",
   "repository": "https://github.com/guardian/editorial-tools-pinboard",
   "scripts": {
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit && yarn ui:check",
     "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js  --platform=node --external:aws-sdk --external:@aws-sdk",
-    "watch": "ts-node-dev --respawn run.ts",
-    "server": "ts-node-dev --respawn src/server.ts",
-    "build": "run-p --print-label type-check bundle"
+    "run": "ts-node-dev --respawn run.ts",
+    "watch-server": "ts-node-dev --respawn src/server.ts",
+    "build": "run-p --print-label type-check bundle",
+    "watch": "run-p --print-label ui:watch-build ui:watch-loader watch-server",
+    "ui:watch-loader": "cd notifications-ui && tsc --watch loader.ts --outFile dist/loader.js",
+    "ui:watch-build": "cd notifications-ui && vite build --watch",
+    "ui:build": "cd notifications-ui && vite build",
+    "ui:preview": "cd notifications-ui && vite preview",
+    "ui:check": "cd notifications-ui && svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tsconfig/svelte": "^5.0.6",
+    "@types/node": "^24.10.1",
     "@types/web-push": "^3.3.2",
-    "ts-node-dev": "^1.1.8"
+    "svelte": "^5.45.2",
+    "svelte-check": "^4.3.4",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "~5.9.3",
+    "vite": "^7.3.1"
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.16.0",
